--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.5",
+    "gatsby-plugin-sharp": "^2.0.10",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-sharp": "^2.1.1",
     "postcss": "^7.0.2",
@@ -25,6 +25,7 @@
     "react-dom": "^16.5.1",
     "react-emotion": "^9.2.9",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.2.2",
     "react-spring": "^5.7.2",
     "tailwindcss": "^0.6.5",
     "typeface-cantata-one": "^0.0.54",
